chore(submodule): bump IgnIt to pick up skip-link z-index fix

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1323,7 +1323,7 @@
     position: fixed;
     top: calc(var(--spacing) * 3);
     left: calc(var(--spacing) * 3);
-    z-index: 50;
+    z-index: 100;
     margin: calc(var(--spacing) * 0);
     display: inline-flex;
     height: auto;
